# nishi-skill

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  reasonix.toml
apps/api/: main.py
apps/desktop/: README.md  design-qa.md  package-lock.json  package.json  tsconfig.json
apps/desktop/app/: globals.css  layout.tsx  page.tsx
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/src/: types.ts
apps/desktop/src/lib/: aiSettings.ts  (+6 more)
docs/specs/: 0001-executable-development-spec.md  0002-development-flow-spec.md  0003-hybrid-vector-search-spec.md  0004-persona-style-distillation-spec.md  0005-calendar-bazi-mcp-spec.md  0006-chat-orchestration-spec.md  README.md
evals/: format_cases.jsonl  hybrid_cases.jsonl  questions.jsonl  safety_cases.jsonl  style_cases.jsonl
knowledge/graph/: entities.jsonl  relations.jsonl  taxonomy.yaml
knowledge/persona/: nihaixia-video-style-fingerprint-v0.1.md  style-fingerprint-v0.1.json  style-fingerprint-v0.2.json  style-fingerprint.schema.json
knowledge/vault/diji/: yangzhai-fangwei-demo.md
knowledge/vault/renji/: shanghan-taiyang-guizhi.md
knowledge/vault/tianji/: ganzhi-wuxing-demo.md
materials/bilibili-style-sources/: README.md  sampling-plan.md  source-catalog.json
skill/ni-haixia-system/: SKILL.md
tests/: test_calendar.py  test_chat_text.py  test_mcp_contracts.py  test_orchestrator.py  test_persona.py  test_query_terms.py  test_retrieval_modes.py  test_subtitle_ingest.py
tools/: _build_scene_packets.cjs  convert_doc_with_word.ps1  extract_style_samples_from_srt.py  inspect_pdf_images.py  inspect_problem_files.py  jianying_template_to_srt.py  mimo-tts.mjs  ocr_scanned_pdfs.py  reimport_converted_docs.py  split_srt_by_durations.py
(+24 files in other folders)
